[package]
authors = ["Zack Owens <zowens2009@gmail.com>"]
homepage = "https://github.com/zowens/commitlog"
license = "MIT"
name = "commitlog"
readme = "README.md"
repository = "https://github.com/zowens/commitlog"
description = "Sequential, disk-backed commit log library."
version = "0.2.0"
edition = "2018"

[features]
# Enable benchmark of the private api. This flag should be used only
# for benchmarking purposes!
internals = []

[dependencies]
byteorder = "1.0"
bytes = "1"
crc32c = "0.6"
log = "0.4.1"
memmap2 = "0.5"
page_size = "0.5.0"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.9"
rand = "0.8"

[[bench]]
name = "index"
harness = false
required-features = ["internals"]

[[bench]]
name = "log-append"
harness = false

[[bench]]
name = "message"
harness = false

[[bench]]
name = "segment"
harness = false
required-features = ["internals"]
